[gd_scene load_steps=17 format=3 uid="uid://bseujhtb28yw8"]

[ext_resource type="AudioStream" uid="uid://dfc5tcrthtntk" path="res://common/sounds/hurt.wav" id="1_2bsqu"]
[ext_resource type="Script" path="res://lessons_reference/02_extended/mobs/mob_follow.gd" id="1_8hdif"]
[ext_resource type="AudioStream" uid="uid://cte8ddxd7o4de" path="res://common/sounds/kill.wav" id="2_wst3d"]
[ext_resource type="PackedScene" path="res://common/shadow.tscn" id="4_ok8ug"]
[ext_resource type="Texture2D" uid="uid://nohjoiah3jgr" path="res://mobs/sword_inactive.png" id="4_wopt0"]
[ext_resource type="Texture2D" uid="uid://bofr21sykbeu4" path="res://mobs/sword_active.png" id="7_wxyh6"]

[sub_resource type="CircleShape2D" id="1"]
radius = 49.3555

[sub_resource type="CircleShape2D" id="2"]
radius = 440.0

[sub_resource type="CircleShape2D" id="3"]
radius = 45.9709

[sub_resource type="Animation" id="Animation_51hgx"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpritePivot/Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SpritePivot/Sprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SpritePivot/Sprite2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("SpritePivot/Sprite2D:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Shadow:self_modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("SpritePivot/Sprite2D:texture")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_wopt0")]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath(".:scale")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_crbnu"]
resource_name = "attack"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpritePivot/Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(2, 1),
"update": 1,
"values": [ExtResource("7_wxyh6"), ExtResource("4_wopt0")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SpritePivot/Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.1, 0.133333, 0.166667, 0.2, 0.266667, 0.6, 0.966667),
"transitions": PackedFloat32Array(2, 1, 1, 1, 1, 0.5, 1, -2, 1),
"update": 0,
"values": [Vector2(-8, -44), Vector2(32, -34), Vector2(47, -15), Vector2(44, 21), Vector2(17, 45), Vector2(-17, 43), Vector2(0, 44), Vector2(0, 44), Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SpritePivot/Sprite2D:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.266667, 0.6, 0.966667),
"transitions": PackedFloat32Array(2, 1, 0.5, 1, -2, 1),
"update": 0,
"values": [-1.77116, -0.317742, 1.96904, 1.57603, 1.57603, 0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("SpritePivot/Sprite2D/AttackHitBox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.433333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_2i0c1"]
resource_name = "damage"
length = 0.133337
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpritePivot/Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.133333),
"transitions": PackedFloat32Array(0.659754, 1),
"update": 0,
"values": [Color(1, 0, 0.0569029, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_rc8d8"]
resource_name = "die"
length = 1.13334
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpritePivot/Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.133333, 0.3, 0.433333, 0.633333, 0.666667, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(2, -30), Vector2(2, -100), Vector2(5, -90), Vector2(2, 31), Vector2(2, 49), Vector2(2, 46)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SpritePivot/Sprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333, 0.233333, 0.433333, 0.633333, 0.666667, 0.7, 0.733333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.368571, 0.290912, 0.24719, -0.0784972, -0.541542, -0.00100583, 0.171697, 0.00590579]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SpritePivot/Sprite2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("SpritePivot/Sprite2D:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.133333, 0.966667, 1.13333),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 0, 0.0569029, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Shadow:self_modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.966667, 1.13333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_k420u"]
_data = {
"RESET": SubResource("Animation_51hgx"),
"attack": SubResource("Animation_crbnu"),
"damage": SubResource("Animation_2i0c1"),
"die": SubResource("Animation_rc8d8")
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bgv0s"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_eq3cr"]
size = Vector2(100, 68)

[node name="MobFollow" type="CharacterBody2D" node_paths=PackedStringArray("animation_player")]
collision_layer = 4
collision_mask = 0
motion_mode = 1
script = ExtResource("1_8hdif")
max_health = 6
animation_player = NodePath("AnimationPlayer")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("1")

[node name="DetectionArea" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
visible = false
position = Vector2(0, 0.33371)
shape = SubResource("2")

[node name="DieSound" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("1_2bsqu")

[node name="HurtSound" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("2_wst3d")

[node name="Shadow" parent="." instance=ExtResource("4_ok8ug")]
position = Vector2(0, 64)

[node name="HitBox" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 0
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
visible = false
shape = SubResource("3")

[node name="CooldownTimer" type="Timer" parent="."]
unique_name_in_owner = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_k420u"),
"mob_follow": SubResource("AnimationLibrary_bgv0s")
}

[node name="SpritePivot" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="Sprite2D" type="Sprite2D" parent="SpritePivot"]
unique_name_in_owner = true
texture = ExtResource("4_wopt0")

[node name="AttackHitBox" type="Area2D" parent="SpritePivot/Sprite2D"]
unique_name_in_owner = true
position = Vector2(41, 0)
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpritePivot/Sprite2D/AttackHitBox"]
visible = false
position = Vector2(-23, 0)
shape = SubResource("RectangleShape2D_eq3cr")
debug_color = Color(0.7, 0.0679942, 0.11609, 0.42)
